# RandomEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md
ExedraCore/: CMakeLists.txt  exedra.h
ExedraCore/assets/default/models/: DefaultCube.fbx
ExedraCore/assets/default/shaders/: default_frag.glsl  default_vert.glsl
ExedraCore/src/: application.cpp  application.h  core.h
ExedraCore/src/assets/default/shaders/: default_frag.glsl
ExedraCore/src/ecs/: camera.cpp  camera.h  cameramovement.cpp  cameramovement.h  component.cpp  component.h  componentsystem.cpp  componentsystem.h  drawer.cpp  drawer.h  entity.cpp  entity.h  entity.tpp  meshdrawer.h  modeldrawer.cpp  modeldrawer.h  scene.cpp  scene.h  scene.tpp  system.cpp  system.h  transform.cpp  transform.h
ExedraCore/src/events/: event.cpp  event.h  eventdispatcher.cpp  eventdispatcher.h
ExedraCore/src/graphics/: camera.cpp  camera.h  framework.cpp  framework.h  renderer.cpp  renderer.h  window.cpp  window.h
ExedraCore/src/gui/: camerawindow.cpp  camerawindow.h  classeditorwindow.h  classeditorwindow.tpp  closablewindow.cpp  closablewindow.h  closablewindow.tpp  dockspacewindow.cpp  dockspacewindow.h  guihandler.cpp  guihandler.h  imguiwindow.cpp  imguiwindow.h  mainmenubar.cpp  mainmenubar.h  renderview.cpp  renderview.h  scenemanager.cpp  scenemanager.h  transformwindow.cpp  transformwindow.h
ExedraCore/src/input/: inputhandler.cpp  inputhandler.h
ExedraCore/src/logging/: debug.cpp  debug.h  log.h
ExedraCore/src/resources/: defaultres.cpp  defaultres.h  mesh.cpp  mesh.h  model.cpp  model.h  modeltexture.cpp  modeltexture.h  rendertexture.cpp  rendertexture.h  shader.cpp  shader.h  texture.cpp  texture.h
ExedraCore/src/utils/: fileloader.cpp  fileloader.h  filereader.cpp  filereader.h  time.cpp  time.h
Sandbox/: CMakeLists.txt  Demo.cpp  Demo.h  main.cpp
